test/invalid/qstring_nested_unfinished.d
//T error: qstring_nested_unfinished.d:4:16:
//T error: Expected '"' to end string literal, not the end of the file.

string s = q{ { "foo } };
